--- a/js/credomobiel.css
+++ b/js/credomobiel.css
@@ -1,7 +1,7 @@
 .base
 {
     height:400px;
-    background-image:url('img/city_social.png');
+    background-image:url('/img/city_social.png');
     background-repeat:repeat-x;
     background-position:center bottom;
     background-color:white;
