--- a/js/credomobiel.css
+++ b/js/credomobiel.css
@@ -23,6 +23,10 @@
 {
     padding: 0px;
 }
+.fullwidthimage .ui-collapsible-content .ui-controlgroup-horizontal,.fullwidthimage .ui-collapsible-content .ui-radio
+{
+    padding: 0px;
+}
 .fullwidthimage .ui-collapsible-content div
 {
     padding: 10px 15px;
