--- a/js/credomobiel.css
+++ b/js/credomobiel.css
@@ -40,6 +40,9 @@ img
 {
     display: none;
 }
+.ui-title {
+    margin: 0.6em 10% 0.8em 5% !important;
+}
 .fullwidthimage img
 {
     max-width: 100%;
